--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"eslint-plugin-react": "^6.10.3",
 		"webpack": "^2.3.3"
 	},
-	"dependencies": {
+	"peerDependencies": {
 		"lodash": "^4.17.4",
 		"quill": "^1.3.6",
 		"raw-loader": "^0.5.1"
