--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"webpack": "^2.3.3"
 	},
 	"dependencies": {
-		"lodash": "^4.17.4",
+		"lodash-es": "^4.17.11",
 		"quill": "^1.3.7",
 		"raw-loader": "^0.5.1"
 	}
