--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
 		"eslint-plugin-react": "^6.10.3",
 		"webpack": "^2.3.3"
 	},
-	"peerDependencies": {
-		"lodash": "^4.17.4",
+	"dependencies": {
+		"lodash-es": "^4.17.11",
 		"quill": "^1.3.7",
 		"raw-loader": "^0.5.1"
 	}
