--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "image-resize.min.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack --progress --colors",
 		"release": "webpack -p --progress --colors",
 		"dev": "webpack --progress --colors --watch",
 		"lint": "eslint --ext js,es6 src",
