--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
 		"lodash-es": "^4.17.11",
 		"quill": "^1.3.7",
 		"raw-loader": "^0.5.1"
+	},
+	"peerDependencies": {
+		"parchment": "^1.1.4"
 	}
 }
